# rs-splunk-webhooks

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: build_docs.yaml  docker_build.yaml  repo_dispatch.yaml  rust_build.yaml
conf/: Settings.yaml
docker/: Dockerfile
src/: conf.rs  handlers.rs  lib.rs  schema.rs  statics.rs
