[package]
name = "splunk-webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
bb-lib-surreal-client = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.1" }
bb-lib-http-listener = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.1" }
anyhow = "1.0.89"
tower = "0.5.1"
axum = { version = "0.7.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
