[package]
name = "splunk-webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
bb-lib-tracing = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.2" }
bb-lib-metrics = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.2" }
bb-lib-surreal-client = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.2" }
bb-lib-http-listener = { git = "git+ssh://github.com/BlueBastion/DEV-bb-lib-bastion.git", version = "2.0.2" }
anyhow = "1.0.89"
tower = { version = "0.5.1", features = ["tracing"] }
axum = { version = "0.7.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace"] }
